# ai_data_assistant

./: AGENTS.md  README.md  pyproject.toml
app/: Home.py  bootstrap.py
audit/: audit_report.py  change_log.py  rule_history.py
config/: logging_config.py
examples/: metadata.json
knowledge/: job_families.json  job_titles.json  provinces.json  regions.json  semantic_rules.json
models/: ai_suggestion.py  audit.py  business_dataset.py  column_profile.py  cross_domain_validation.py  dataset.py  enrichment.py  export.py  knowledge.py  knowledge_package.py  report.py  rule.py  rule_generation.py  semantic_column_registry.py  semantic_dataset.py  semantic_tag.py  standardization.py
services/: ai_rule_generation_service.py  business_dataset_service.py  enrichment_service.py  export_service.py  profiling_service.py  report_service.py  rule_generation_service.py  rule_service.py  semantic_dataset_service.py  semantic_service.py  standardization_service.py
storage/: artifact_store.py
tests/: cross_domain_pipeline_helper.py  test_ai_rule_generation_service.py  test_alias_matcher.py  test_audit_report.py  test_business_dataset_service.py  test_categorical_standardizer.py  test_change_log.py  test_company_size_package.py  test_contains_matcher.py  test_crm_pipeline.py  test_csv_exporter.py  test_education_package.py  test_employment_type_package.py  test_enricher_registry.py  test_enrichment_engine.py  test_enrichment_service.py  test_exact_matcher.py  test_experience_level_package.py  test_export_manager.py  test_export_registry.py  test_export_service.py  (+55 more)
(+247 files in other folders)
